[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "py_bsor"
version = "0.9.8"
authors = [
  { name="Carsten Schipmann", email="theschippi+gh@gmail.com" },
]
description = "BS Open Replay Parser"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Schippi/py-bsor"
"Bug Tracker" = "https://github.com/Schippi/py-bsor/issues"