[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "py-bsor"
version = "1.2.0"
authors = [
  { name="Carsten Schipmann", email="theschippi+gh@gmail.com" },
]
description = "BS Open Replay Parser, with added support for controlleroffsets and userdata"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Schippi/py-bsor"
"Bug Tracker" = "https://github.com/Schippi/py-bsor/issues"